# mandarin_learner

./: .gitignore  README.md  config.toml  pyproject.toml
app/: config.py  database.py  init_db.py  main.py  models.py  schemas.py  seed.py
app/data/: characters.csv  characters_hsk1.csv
app/prompts/: generation_prompt.txt
app/routes/: characters.py  generate.py  ui.py
app/services/: generation_service.py  validator.py  vocabulary_service.py
app/templates/: index.html  known_characters.html  result.html
eval/: get_langfuse_success_rate.py
notebooks/: data_tasks.ipynb  trace_exploration.ipynb
